--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
+        "laravellegends/pt-br-validator": "^10.0",
         "livewire/livewire": "^2.12",
         "wireui/wireui": "^1.17"
     },
@@ -30,7 +31,10 @@
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
-        }
+        },
+        "files" :[
+            "app/Helpers/custom-helpers.php"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
