--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/tinker": "^2.8",
         "laravellegends/pt-br-validator": "^10.0",
         "livewire/livewire": "^2.12",
+        "pusher/pusher-php-server": "^7.2",
         "wireui/wireui": "^1.17"
     },
     "require-dev": {
