--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
         "alpinejs": "^3.8",
         "autoprefixer": "^10.4.14",
         "flowbite": "^1.6.4",
+        "laravel-echo": "^1.15.1",
         "laravel-vite-plugin": "^0.7.2",
         "postcss": "^8.4.21",
+        "pusher-js": "^8.0.2",
         "resolve-url-loader": "^3.1",
         "sass": "^1.3",
         "sass-loader": "^8.0",
