--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "wireui/wireui": "^1.17"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.8",
         "barryvdh/laravel-ide-helper": "^2.13",
         "fakerphp/faker": "^1.9.1",
         "laravel-lang/common": "^3.1",
